# generic-dna

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  weave.dev.config.ts
.github/workflows/: release-happ.yaml  test.yaml
dnas/generic_dna/workdir/: dna.yaml
dnas/generic_dna/zomes/coordinator/generic_zome/: Cargo.toml
dnas/generic_dna/zomes/coordinator/generic_zome/src/: api.rs  lib.rs  thing_to_agents.rs
dnas/generic_dna/zomes/integrity/generic_zome/: Cargo.toml
dnas/generic_dna/zomes/integrity/generic_zome/src/: lib.rs  link_tag_content.rs  thing.rs  thing_to_agents.rs  to_agent.rs  to_anchor.rs  to_thing.rs
lib/: package.json  tsconfig.json
lib/src/: index.ts  types.ts
tests/: package.json
tests/src/generic_dna/generic_zome/: common.ts  thing-to-agents.test.ts  thing.test.ts  thing_links.test.ts
ui/: index.html  package.json
ui/src/: contexts.ts  holochain-app.ts  simpleHolochain.ts  types.ts
ui/src/elements/: all-posts.ts  create-post.ts  create-thing.ts  edit-thing.ts  post-detail.ts  thing-detail.ts
ui/src/generic_dna/generic_zome/: create-thing.ts  edit-thing.ts  thing-detail.ts  types.ts
workdir/: happ.yaml  web-happ.yaml
